--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -40,6 +40,8 @@
     </array>
     <key>FLTEnableImpeller</key>
     <false />
+    <key>FirebaseAppDelegateProxyEnabled</key>
+    <false/>
     <key>UISupportedInterfaceOrientations~ipad</key>
     <array>
       <string>UIInterfaceOrientationPortrait</string>
