--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_flavorizr: ^2.2.3
   flutter_launcher_icons: ^0.13.1
-  firebase_core:
-  firebase_messaging:
+  firebase_core: ^2.27.0
+  firebase_messaging: ^14.7.19
+
 
 dev_dependencies:
   flutter_test:
