--- a/flavorizr.yaml
+++ b/flavorizr.yaml
@@ -29,3 +29,17 @@ flavors:
         applicationId: "com.example.flutterProd"
       ios:
         bundleId: "com.example.flutterProd"
+  staging:
+    app:
+      name: "flutter production"
+    android:
+      applicationId: "com.example.flavorStage"
+    ios:
+      bundleId: "com.example.flavorStaging"
+  testing:
+    app:
+      name: "flutter production"
+    android:
+      applicationId: "com.example.flavorTest"
+    ios:
+      bundleId: "com.example.flavorTest"
