--- a/ios/Runner.xcodeproj/xcshareddata/xcschemes/flutterProd.xcscheme
+++ b/ios/Runner.xcodeproj/xcshareddata/xcschemes/flutterProd.xcscheme
@@ -46,8 +46,18 @@
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "OS_ACTIVITY_MODE"
-            value = "disable"
+            value = "disab le"
             isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = ""
+            value = ""
+            isEnabled = "NO">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = ""
+            value = ""
+            isEnabled = "NO">
          </EnvironmentVariable>
       </EnvironmentVariables>
    </LaunchAction>
